--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
   "scripts": {
     "test": "./vendor/bin/pest",
     "start": "php -S localhost:8000"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
